hyperstack-macros/tests/ui/validation_errors/missing_proto_value.rs
use hyperstack_macros::hyperstack;

#[hyperstack(proto)]
mod broken {}

fn main() {}
